--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ html {
 	scroll-behavior: smooth;
 }
 
-.scrollbar-none{
+.scrollbar-none {
 	scrollbar-width: none;
 }
 
@@ -1248,4 +1248,57 @@ html {
 .swiper-slide {
 	width: 497px !important;
 	height: 260px !important;
+}
+
+/* ABOUT */
+.rs-about-info::before {
+	position: absolute;
+	content: '';
+	width: 100%;
+	height: 300px;
+	filter: blur(200px);
+	background: #411b1b;
+	z-index: -1;
+	transform: rotate(-158deg);
+	bottom: 30%;
+	right: 0;
+}
+
+.our-culture::before {
+	position: absolute;
+	content: '';
+	width: 100%;
+	height: 300px;
+	filter: blur(200px);
+	background: #411b1b;
+	z-index: -1;
+	transform: rotate(-158deg);
+	bottom: 0;
+	right: 0;
+}
+
+.need-help::before {
+	position: absolute;
+	content: '';
+	width: 100%;
+	height: 300px;
+	filter: blur(200px);
+	background: #411b1b;
+	z-index: -1;
+	transform: rotate(-158deg);
+	bottom: 50%;
+	right: 0;
+}
+
+.need-help::after {
+	position: absolute;
+	content: '';
+	width: 130px;
+	height: 130px;
+	filter: blur(150px);
+	border-radius: 100%;
+	background: #80921b;
+	z-index: -1;
+	bottom: 0;
+	left: 35%;
 }
