--- a/css/responsive.css
+++ b/css/responsive.css
@@ -28,6 +28,10 @@
     .rs-about-us-list li p {
         padding-right: 0 !important;
     }
+
+    .swiper.mySwiper {
+        margin-left: -270px;
+    }
 }
 
 @media (max-width: 1300px) {
@@ -36,6 +40,10 @@
         bottom: -32px;
         width: 100%;
         height: 140px;
+    }
+
+    .swiper-box {
+        height: 275px !important;
     }
 
     .rs-footer-text br {
@@ -91,22 +99,18 @@
     }
 
     .swiper-slide {
-        width: 450px !important;
-        height: 250px !important;
+        width: auto !important;
+        height: 240px !important;
     }
 
-    .swiper-slide.swiper-slide-next {
-        width: 600px !important;
-        height: 300px !important;
-    }
-
-    .swiper-slide.swiper-slide-next .rs-website-thumb {
-        width: 600px !important;
-        height: 300px !important;
-    }
 
     .swiper.mySwiper {
-        margin-left: -190px;
+        margin-left: 0 !important;
+    }
+
+    .swiper-slide-active {
+        width: auto !important;
+        height: 240px !important;
     }
 
     .rs-count-widget-item span {
@@ -153,6 +157,10 @@
     .our-culture h3,
     .rs-about-info h3 {
         font-size: 32px;
+    }
+
+    .rs-website-thumb {
+        width: auto;
     }
 }
 
@@ -237,21 +245,6 @@
         gap: 12px !important;
     }
 
-    .swiper-slide {
-        width: 400px !important;
-        height: 250px !important;
-    }
-
-    .swiper-slide.swiper-slide-next .rs-website-thumb,
-    .swiper-slide.swiper-slide-next {
-        width: 550px !important;
-        height: 300px !important;
-    }
-
-    .swiper.mySwiper {
-        margin-left: -225px;
-    }
-
     .section-title-wrapper img.ml-auto {
         display: none;
     }
@@ -272,6 +265,10 @@
     .rs-count-widget-item::after {
         right: -35%;
         top: 50px;
+    }
+
+    .rs-website-thumb h3 {
+        font-size: 16px !important;
     }
 
     .rs-count-widget-item span {
@@ -315,6 +312,10 @@
         display: none !important;
     }
 
+    /* .rs-website-thumb {
+        width: auto;
+    } */
+
     .rs-breadcrumb-content p br {
         display: none;
     }
@@ -346,6 +347,16 @@
     .rs-hero-content .title {
         font-size: 40px !important;
     }
+
+    /* .swiper-slide {
+        width: 100% !important;
+        height: 300px !important;
+    }
+
+    .swiper-slide-active {
+        width: 100% !important;
+        height: 300px !important;
+    } */
 
     .rs-hero-area .max-w-2lg {
         display: block !important;
@@ -486,24 +497,8 @@
         width: 31%;
     }
 
-    .swiper-slide {
-        width: 350px !important;
-        height: 200px !important;
-    }
-
-    .rs-website-thumb img {
-        width: 350px !important;
-        height: 200px !important;
-    }
-
-    .swiper-slide.swiper-slide-next .rs-website-thumb,
-    .swiper-slide.swiper-slide-next {
-        width: 550px !important;
-        height: 300px !important;
-    }
-
     .swiper.mySwiper {
-        margin-left: -290px;
+        margin-left: 0 !important;
     }
 
     .rs-faq-area {
@@ -614,7 +609,6 @@
         padding: 8px !important;
         gap: 8px !important;
         height: auto !important;
-        margin-bottom: 0;
     }
 
     .swiper.mySwiper {
@@ -722,11 +716,23 @@
     .rs-breadcrumb-content p {
         font-size: 16px !important;
     }
+
+    
 }
 
 @media (max-width: 576px) {
     .rs-about-info P {
         font-size: 14PX;
+    }
+
+    .swiper-slide {
+        width: 100% !important;
+        height: 240px !important;
+    }
+
+    .swiper-slide-active {
+        width: 100% !important;
+        height: 240px !important;
     }
 
     .rs-about-info h3 {
@@ -812,6 +818,7 @@
     .rs-website-content .flex.items-center.gap-4 {
         flex-wrap: wrap;
     }
+
     .rs-website-content .common-btn {
         width: 100%;
     }
