--- a/css/style.css
+++ b/css/style.css
@@ -563,6 +563,10 @@ html {
 	pointer-events: none;
 }
 
+.rs-backdrop-blur {
+	backdrop-filter: blur(10px);
+}
+
 /* Outer ring */
 .rs-technology-icons-bg::before {
 	background: conic-gradient(from var(--angle, 210deg), rgba(0, 0, 0, 0.479) 0%, rgba(0, 0, 0, 0.445) 10%, #DD5454 50%, rgba(0, 0, 0, 0.411) 90%, rgba(0, 0, 0, 0.438) 100%);
@@ -734,10 +738,6 @@ html {
 	opacity: 0;
 	visibility: hidden;
 }
-
-
-
-
 
 
 /*----------------------------------------*/
@@ -1230,25 +1230,55 @@ html {
 	mask-composite: exclude;
 }
 
-.swiper-slide.swiper-slide-next {
-	width: 655px !important;
-	height: 334px !important;
-}
-
-.swiper-slide.swiper-slide-next .rs-website-thumb {
-	width: 655px !important;
-	height: 334px !important;
-}
-
-.swiper-slide.swiper-slide-next .rs-website-thumb img {
-	width: 100% !important;
-	height: 100% !important;
-}
-
+/* Side slides */
 .swiper-slide {
 	width: 497px !important;
 	height: 260px !important;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 8px;
+	overflow: hidden;
+	transition: transform 0.5s ease, width 0.5s ease, height 0.5s ease;
 }
+
+.swiper-slide-active {
+	width: 655px !important;
+	height: 334px !important;
+	z-index: 10;
+}
+
+.rs-website-thumb {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	border-radius: 8px;
+	transition: transform 0.5s ease;
+	cursor: pointer;
+}
+
+.swiper-slide:not(.swiper-slide-active) .rs-website-thumb {
+	transform: scale(1);
+}
+
+.swiper-slide-active .rs-website-thumb {
+	transform: scale(1);
+}
+
+.rs-website-thumb img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 8px;
+	transition: transform 0.5s ease;
+}
+
+.mySwiper .swiper-wrapper {
+	align-items: center;
+	overflow: visible;
+	transition: transform 0.5s ease;
+}
+
 
 /* ABOUT */
 .rs-about-info::before {
