--- a/css/scrool-to-top.css
+++ b/css/scrool-to-top.css
@@ -8,13 +8,14 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background: linear-gradient(90deg, rgba(255, 254, 254, 0.08) 0%, rgba(0, 0, 0, 1) 50%, rgba(255, 254, 254, 0.08) 100%);
+    background: linear-gradient(90deg, rgba(255, 254, 254, 0.08) 0%, rgba(0, 0, 0, 0.342) 50%, rgba(255, 254, 254, 0.08) 100%);
     border-radius: 50%;
     overflow: hidden;
     cursor: pointer;
     z-index: 999;
     border: 1px solid #ffffff2a;
     transition: 0.5s ease all;
+    backdrop-filter: blur(30px);
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px),
