--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ html {
 	text-stroke: 3px #ff5500;
 }
 
+button {
+	outline: none !important;
+}
+
 /* HEADER */
 .rs-main-menu nav ul>li {
 	position: relative;
@@ -759,6 +763,16 @@ html {
 	visibility: hidden;
 }
 
+.rs-social-icon a {
+	transition: .3s linear;
+	border: 1px solid transparent;
+}
+
+.rs-social-icon a:hover {
+	border: 1px solid #dddddd59;
+	background: #72626217;
+}
+
 
 /*----------------------------------------*/
 /*  1.6 Offcanvas Start
@@ -1402,6 +1416,9 @@ a:hover .border-anim-2 {
 }
 
 
+.rs-header-area {
+	border-bottom: 1px solid #ffffff00;
+}
 .rs-header-sticky {
 	position: sticky !important;
 	top: 0;
@@ -1409,5 +1426,7 @@ a:hover .border-anim-2 {
 	background: var(--black);
 	z-index: 99;
 	right: 0;
-	transition: .2s linear;
+	transition: .1s linear;
+	border-bottom: 1px solid #ffffff52;
+	border-radius: 0 0 8px 8px;
 }
